add user logic and templates

--- a/blog/templates/template.html
+++ b/blog/templates/template.html
@@ -1,2 +1,8 @@
+<div class="topnav">
+    <a class="active" href="{{ url_for('index') }}">Home</a>
+    <a href="{{ url_for('users') }}">Users</a>
+    <a href="{{ url_for('register') }}">Register</a>
+</div>
+
 {% block content %}
 {% endblock %}
